Bug 477476 - Oxygen Yellow Cursor Theme does not display on Breeze Twilight on Arch with Plasma / Qt 6
Summary: Oxygen Yellow Cursor Theme does not display on Breeze Twilight on Arch with P...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.92.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-24 18:03 UTC by Marco Parillo
Modified: 2024-02-02 15:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Parillo 2023-11-24 18:03:47 UTC
SUMMARY
***
I upgraded my Arch Linux laptop to Plasma 6, and my beloved Oxygen Yellow Cursor is not visible.
***


STEPS TO REPRODUCE
1. Install Arch Linux with plasma-meta
2. Switch global theme to Breeze Twilight
3. Switch Cursor to Oxygen Yellow
4. Upgrade to Plasma 6 Alpha Release
5. Cursor is not visible

OBSERVED RESULT

Cursor is not visible

EXPECTED RESULT

Cursor is visible


ADDITIONAL INFORMATION

I can tell it is working because when I go back to System Settings > Cursor I can see the selections change as I mouse over them.
Comment 1 Marco Parillo 2023-11-24 23:42:02 UTC
The "it" that I can see working is the invisble mouse pointer.
Comment 2 Marco Parillo 2023-12-10 17:59:43 UTC
With today's update:
[2023-12-10T12:43:26-0500] [ALPM] upgraded oxygen (5.90.0-1 -> 5.90.0-2)
I can see my Oxygen Yellow Cursor, but is always looks like the I-Beam for text entry rather than switching to the arrow, finger, etc.
Comment 3 Pieter van der Vegte 2023-12-27 07:01:46 UTC
I have the same issue.
The Oxygen yellow and also the Oxygen Red Ruby cursor becomes invisible after installing on openSUSE Krypton (Plasma 6) and then logging out and back in. 
The software is up-to-date. 
The cursor worked at first but after logging out and back in it's not visible and the only way to interact is to move the mouse until the invisible cursor lands on and highlights the option I want to click on.
Comment 4 Marco Parillo 2023-12-27 18:09:41 UTC
On KaOS with Plasma 6, with Oxygen packaged as 5.91, it almost seems as if the Oxygen cursor is "reluctant" to change shape back to a pointer. I have had it remain as a finger, an I-Beam, and a column re-sizer rather than switch to a pointer.
Comment 5 Marco Parillo 2024-01-13 17:23:05 UTC
Since switching from Wayland to x11 resolves this, changing product from Oxygen to Kwin.
Comment 6 Vlad Zahorodnii 2024-01-15 13:49:19 UTC
I cannot reproduce it
Comment 7 Vlad Zahorodnii 2024-01-15 13:50:34 UTC
If you switch between breeze and oxygen yellow cursor themes in plasma 6 back and forth, is oxygen yellow cursor visible after that?
Comment 8 Marco Parillo 2024-01-15 20:30:07 UTC
In Wayland?
Comment 9 Marco Parillo 2024-01-15 22:19:20 UTC
Starting with x11: Oxygen Yellow Cursor visible.
Reboot.
Select Plasma-Wayland in SDDM.
Login.
Oxygen Yellow Cursor invisible.
System Settings > Cursors > Breeze > Apply.
Breeze Cursor immediately visible.
Comment 10 Bug Janitor Service 2024-02-02 10:35:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5093
Comment 11 Vlad Zahorodnii 2024-02-02 11:42:35 UTC
(In reply to Marco Parillo from comment #8)
> In Wayland?

It turns out I was hitting the same issue but with different side effects
Comment 12 Vlad Zahorodnii 2024-02-02 15:18:00 UTC
Git commit cc2e6fc96cbed230b4cdcd2353a805ec26dd2553 by Vlad Zahorodnii.
Committed on 02/02/2024 at 15:17.
Pushed by vladz into branch 'master'.

Add fallback cursor shape for "default" shape

Some cursor themes don't have "default" shape, so fallback to "left_ptr"
with such themes.

M  +6    -0    src/cursor.cpp

https://invent.kde.org/plasma/kwin/-/commit/cc2e6fc96cbed230b4cdcd2353a805ec26dd2553
Comment 13 Vlad Zahorodnii 2024-02-02 15:18:49 UTC
Git commit d296e10803bc5b7ede453f015fbea0fd3ea91874 by Vlad Zahorodnii.
Committed on 02/02/2024 at 15:18.
Pushed by vladz into branch 'Plasma/6.0'.

Add fallback cursor shape for "default" shape

Some cursor themes don't have "default" shape, so fallback to "left_ptr"
with such themes.


(cherry picked from commit cc2e6fc96cbed230b4cdcd2353a805ec26dd2553)

M  +6    -0    src/cursor.cpp

https://invent.kde.org/plasma/kwin/-/commit/d296e10803bc5b7ede453f015fbea0fd3ea91874