Add fallback cursor shape for "default" shape

Some cursor themes don't have "default" shape, so fallback to "left_ptr"
with such themes.

BUG: 477476